[gd_scene load_steps=2 format=2]

[ext_resource path="res://test/TestAudio.gd" type="Script" id=1]

[node name="TestAudio" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="FileDialog" type="FileDialog" parent="."]
margin_right = 581.0
margin_bottom = 377.0
window_title = "Load a File"
mode = 0
access = 2
filters = PoolStringArray( "*.mp3 ; MP3 Files" )

[node name="VBox" type="VBoxContainer" parent="."]
margin_left = 128.0
margin_top = 66.0
margin_right = 878.0
margin_bottom = 548.0
custom_constants/separation = 20

[node name="File" type="Button" parent="VBox"]
margin_right = 750.0
margin_bottom = 20.0
text = "File"

[node name="Version" type="Label" parent="VBox"]
margin_top = 40.0
margin_right = 750.0
margin_bottom = 54.0

[node name="Title" type="Label" parent="VBox"]
margin_top = 74.0
margin_right = 750.0
margin_bottom = 88.0

[node name="Album" type="Label" parent="VBox"]
margin_top = 108.0
margin_right = 750.0
margin_bottom = 122.0

[node name="Band" type="Label" parent="VBox"]
margin_top = 142.0
margin_right = 750.0
margin_bottom = 156.0

[node name="Comments" type="Label" parent="VBox"]
margin_top = 176.0
margin_right = 750.0
margin_bottom = 190.0

[node name="Year" type="Label" parent="VBox"]
margin_top = 210.0
margin_right = 750.0
margin_bottom = 224.0

[node name="Error" type="Label" parent="VBox"]
margin_top = 244.0
margin_right = 750.0
margin_bottom = 258.0

[node name="MimeType" type="Label" parent="VBox"]
margin_top = 278.0
margin_right = 750.0
margin_bottom = 292.0

[node name="TextureRect" type="TextureRect" parent="VBox"]
margin_top = 312.0
margin_right = 750.0
margin_bottom = 312.0

[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="pressed" from="VBox/File" to="." method="_on_File_pressed"]
